# service/api/api-handler.go
@@ -14,13 +14,13 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/users/:userid/mainstream/", rt.wrap(rt.getMyStream))
 	rt.router.PUT("/users/:userid/banned/:BannedId", rt.wrap(rt.banUser))
 	rt.router.DELETE("/users/:userid/banned/:BannedId", rt.wrap(rt.unbanUser))
-	rt.router.POST("/users/:userid/photos/", rt.wrap(rt.uploadPhoto))
-	rt.router.DELETE("/users/:userid/photos/:photoid", rt.wrap(rt.deletePhoto))
-	rt.router.GET("/users/:userid/photos/:photoid", rt.wrap(rt.getPhoto))
-	rt.router.PUT("/users/:userid/photos/:photoid/comments/:useridputting", rt.wrap(rt.commentPhoto))
-	rt.router.DELETE("/users/:userid/photos/:photoid/comments/:commentid", rt.wrap(rt.uncommentPhoto))
-	rt.router.PUT("/users/:userid/photos/:photoid/like/:likeid", rt.wrap(rt.likePhoto))
-	rt.router.DELETE("/users/:userid/photos/:photoid/like/:likeid", rt.wrap(rt.unlikePhoto))
+	rt.router.POST("/photos/", rt.wrap(rt.uploadPhoto))
+	rt.router.DELETE("/photos/:photoid", rt.wrap(rt.deletePhoto))
+	rt.router.GET("/photos/:photoid", rt.wrap(rt.getPhoto))
+	rt.router.POST("/photos/:photoid/comments/", rt.wrap(rt.commentPhoto))
+	rt.router.DELETE("/photos/:photoid/comments/:commentid", rt.wrap(rt.uncommentPhoto))
+	rt.router.PUT("/photos/:photoid/like/:likeid", rt.wrap(rt.likePhoto))
+	rt.router.DELETE("/photos/:photoid/like/:likeid", rt.wrap(rt.unlikePhoto))
 	rt.router.PUT("/users/:userid/followed/:followedUserId", rt.wrap(rt.followUser))
 	rt.router.DELETE("/users/:userid/followed/:followedUserId", rt.wrap(rt.unfollowUser))
 
